# v6-tools-rdf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish_python_package.yml  sync-schema.yml  test-suite.yml
src/vantage6_strongaya_rdf/: __init__.py  collect_sparql_data.py  data_processing.py  schema_loader.py  schema_parser.py  sparql_client.py
src/vantage6_strongaya_rdf/query_templates/: multi_column.rq  retrieve_column.rq  single_column.rq
src/vantage6_strongaya_rdf/schemas/: AYA_cancer_schema.jsonld
test/: old_test_setup.py
tests/: __init__.py  conftest.py
tests/data/: additional_vantage6_node_config.yaml  additional_vantage6_server_config.yaml  additional_vantage6_store_config.yaml  annotation.ttl  data.csv  data.ttl  ontology.ttl  rdf_store.csv
tests/integration/: test_rdf_algorithm_integration.py  test_vantage6_integration.py
tests/manual_mock_client/: manual_vantage_mock.py  test_data_rdf.csv
tests/mock_algorithm/v6-rdf-mock/: .copier-answers.yml  Dockerfile  README.md  requirements.txt  setup.py
tests/mock_algorithm/v6-rdf-mock/v6-rdf-mock/: __init__.py  central.py  partial.py
tests/unit/: test_library_functions.py  test_schema_functions.py
